#28 Fixed composer PHP version at 7.3 and updated packages

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
         "classmap-authoritative": true,
         "optimize-autoloader": true,
         "prepend-autoloader": false,
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+            "php": "7.3"
+        }
     }
 }
